syntax = "proto3";

option java_multiple_files = true;

package org.cyducks.generated;

message Point {
  float lat = 1;
  float lng = 2;
}

message Report {
  string zone_id = 1;
  string moderator_id = 2;
  string type = 3;
  Point location = 4;
  string timestamp = 5;
}

message ReportAck {
  int32 status = 1;
}

service ReportService {
  rpc sendReport(Report) returns (ReportAck) {}
}